add styling to index.html file

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -65,7 +65,9 @@
     </main>
     <footer>
       Made by Ayoub -
-      <a href="https://github.com/ayoubenezzi" target="_blank">here</a>
+      <a href="https://github.com/ayoubenezzi" target="_blank"
+        >Check my Github</a
+      >
     </footer>
   </body>
 </html>
