--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -103,7 +103,9 @@
     </main>
     <footer>
       Made by Ayoub -
-      <a href="https://github.com/ayoubenezzi" target="_blank">here</a>
+      <a href="https://github.com/ayoubenezzi" target="_blank"
+        >Check my Github</a
+      >
     </footer>
   </body>
 </html>
